SMARTER-3281 Se baja versión de .NET ya que el pipeline tiene problemas

--- a/test/sw-cadenaoriginal-test/sw-cadenaoriginal-test.csproj
+++ b/test/sw-cadenaoriginal-test/sw-cadenaoriginal-test.csproj
@@ -1,8 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>sw_cadenaoriginal_test</RootNamespace>
-    <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
