--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ trigger:
       - "hotfix/*"
       - "feature/*"
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'windows latest'
 
 steps:
 - task: DotNetCoreCLI@2
